# STAQS_Analysis

./: .gitignore  main.py  paths.json  plots_for_Anne.ipynb  plotting_stuff.ipynb  pyproject.toml
experiment/: ecip_stm_analysis.ipynb  tempo_midatl_download.ipynb
experiments/: data_cleaning.py  discussion.md
notebooks/: EDA.ipynb  analysis.ipynb  experiments.ipynb  hsrl2_vs_tolnet.ipynb  plotting_stuff.ipynb
scripts/: Analysis.py
src/: importData.py
