[project]
name = "staqs-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "atmoz",
    "dask>=2026.6.0",
    "geopy>=2.4.1",
    "h5netcdf>=1.8.1",
]

[tool.uv.sources]
atmoz = { path = "/home/magnolia/projects/atmoz", editable = true }
